Add AlterStatement.kt, Config.kt, ReferenceTests.kt; Add method for table creation

--- a/src/main/resources/tinylog.properties
+++ b/src/main/resources/tinylog.properties
@@ -1,7 +1,11 @@
-writer        = console
-writer.format = [{level}] ({uptime: HH:mm:ss.SSS}) {class-name}.{method}():\n{message}\n
-writer.tag    = -
+writer         = console
+writer.format  = [{level}] ({uptime: HH:mm:ss.SSS}) {class-name}.{method}():\n{message}\n
+writer.tag     = -
 
 writer1        = console
 writer1.format = [SQL] ({uptime: HH:mm:ss.SSS}): {message}
-writer1.tag    = CREATE, DELETE, DROP, INSERT, SELECT, UPDATE
+writer1.tag    = ALTER, CREATE, DELETE, DROP, INSERT, SELECT, UPDATE
+
+writer2        = console
+writer2.format = [{level}] ({uptime: HH:mm:ss.SSS}): {message}\n
+writer2.tag    = EXCEPTION
